--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -19,12 +19,13 @@
     />
 
     <link rel="stylesheet" href="./css/home.css" />
-    <script src="home.js" type="module" defer></script>
+    <script src="home.js" type="module"></script>
+   
   </head>
 
   <body>
     <!-- 헤더 -->
-    <header id="headerWrap">
+    <!-- <header id="headerWrap">
       <nav>
         <div class="headerTop">
           <img src="../images/sample_logo.png" alt="logo" />
@@ -49,12 +50,15 @@
             <li><a href="#">내 탄생석은?</a></li>
           </ul>
         </div>
-      </nav>
+      </nav>     
+    </header> -->
+    <div data-include-path="../components/header.html"></div>
 
-      <article>
-        <img src="../images/visualBanner1.png" alt="visulaImage" />
-      </article>
-    </header>
+
+    <!-- 비주얼 배너 -->
+    <article class="visualBanner">
+      <img src="../images/visualBanner1.png" alt="visulaImage" />
+    </article>
 
     <!-- 메인 -->
     <main role="main" id="mainWrap">
@@ -109,8 +113,11 @@
       </section>
     </main>
 
+
+
     <!-- 푸터 -->
-    <footer>
+    <div data-include-path="../components/footer.html"></div>
+    <!-- <footer>
       <article>
         <ul>
           <li>
@@ -188,6 +195,7 @@
           </p>
         </div>
       </address>
-    </footer>
+    </footer> -->
+
   </body>
 </html>
