--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -75,108 +75,7 @@
         </div>
       </section>
 
-      <section>
-        <form
-          id="purchasing "
-          class="box block columns is-flex is-align-items-center is-justify-content-space-between"
-        >
-          <div class="is-flex is-align-items-center">
-            <figure class="image is-128x128 is-flex mr-2">
-              <img
-                id="itemPreview"
-                src="https://bulma.io/images/placeholders/128x128.png"
-                class="mr-2"
-              />
-            </figure>
-            <div>
-              <h3 id="txtId" class="title is-5">
-                [9월탄생석] 쁘띠 디디 골드 목걸이
-              </h3>
-              <p id="txtSubtitle" class="subtitle is-7">
-                9월의 탄생석 사파이어입니다. <br />
-                사파이어는 변치 않는 사랑을 약속하는 의미로. <br />
-                연인의 기념일에 어울리는 보석이에요.
-              </p>
-              <p class="subtitle is-7 tag is-link is-light">
-                <span id="pricePerItem">19,000</span>&nbsp;원
-              </p>
-            </div>
-          </div>
-          <div
-            class="block is-flex is-align-items-center is-justify-content-flex-end"
-          >
-            <input
-              id="countItem"
-              class="input is-3 column mr-2"
-              type="text"
-              placeholder="0"
-            />
-            <button id="btnDeleteItem" class="delete column"></button>
-          </div>
-        </form>
-        <!-- 추후 삭제 부분 START -->
-        <form
-          class="box block columns is-flex is-align-items-center is-justify-content-space-between"
-        >
-          <div class="is-flex is-align-items-center">
-            <figure class="image is-128x128 is-flex mr-2">
-              <img
-                src="https://bulma.io/images/placeholders/128x128.png"
-                class="mr-2"
-              />
-            </figure>
-            <div>
-              <h3 class="title is-5">[9월탄생석] 쁘띠 디디 골드 목걸이</h3>
-              <p class="subtitle is-7">
-                9월의 탄생석 사파이어입니다. <br />
-                사파이어는 변치 않는 사랑을 약속하는 의미로. <br />
-                연인의 기념일에 어울리는 보석이에요.
-              </p>
-              <p class="subtitle is-7 tag is-link is-light">
-                <span>19,000</span>&nbsp;원
-              </p>
-            </div>
-          </div>
-          <div
-            class="block is-flex is-align-items-center is-justify-content-flex-end"
-          >
-            <input class="input is-3 column mr-2" type="text" placeholder="0" />
-            <button class="delete column"></button>
-          </div>
-        </form>
-
-        <form
-          class="box block columns is-flex is-align-items-center is-justify-content-space-between"
-        >
-          <div class="is-flex is-align-items-center">
-            <figure class="image is-128x128 is-flex mr-2">
-              <img
-                src="https://bulma.io/images/placeholders/128x128.png"
-                class="mr-2"
-              />
-            </figure>
-            <div>
-              <h3 class="title is-5">[9월탄생석] 쁘띠 디디 골드 목걸이</h3>
-              <p class="subtitle is-7">
-                9월의 탄생석 사파이어입니다. <br />
-                사파이어는 변치 않는 사랑을 약속하는 의미로. <br />
-                연인의 기념일에 어울리는 보석이에요.
-              </p>
-              <p class="subtitle is-7 tag is-link is-light">
-                <span>19,000</span>&nbsp;원
-              </p>
-            </div>
-          </div>
-          <div
-            class="block is-flex is-align-items-center is-justify-content-flex-end"
-          >
-            <input class="input is-3 column mr-2" type="text" placeholder="0" />
-            <button class="delete column"></button>
-          </div>
-        </form>
-        <!-- 추후 삭제 부분 END -->
-      </section>
-
+      <section id="listItems"></section>
       <section class="total mt-6">
         <div class="is-flex is-justify-content-space-between">
           <div class="block">
