--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -110,7 +110,9 @@
       <section class="newArrival">
         <strong>NEW ARRIVAL</strong>
         <article class="productWrap">
-          <ul class="product"></ul>
+          <ul class="product">
+            
+          </ul>
         </article>
       </section>
     </main>
