--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -33,8 +33,8 @@
 
         <form class="formWrap" id="registerUserForm">
           <div class="flexContent">
-            <label class="textLeft" for="idInput">아이디</label>
-            <div class="">
+            <p class="textLeft" ><label for="idInput">아이디</label></p>
+            <div>
               <input
                 class="input"
                 id="idInput"
