--- a/src/views/account-info/account-info.html
+++ b/src/views/account-info/account-info.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>로그인</title>
+    <title>오작뀨 - 개인정보 수정</title>
 
     <!-- 아이콘 -->
     <link
@@ -11,6 +11,11 @@
       type="image/png"
       sizes="16x16"
       href="/elice-rabbit-favicon.png"
+    />
+    <!-- bulma css 관련 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
 
     <script
@@ -28,7 +33,56 @@
     <div data-include-path="../components/header.html"></div>
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container is-max-desktop">
-      info page
+      <div class="form-container">
+        <form id="infoForm" class="box form-box">
+          <div class="field">
+            <label class="label">이름</label>
+            <div class="control">
+              <input type="text" id="nameInput" autocomplete="off" />
+              <!-- <label class="switch">
+                <input type="checkbox" id="nameToggle" />
+                <span class="slider round"></span>
+              </label> -->
+            </div>
+          </div>
+          <div class="field">
+            <label class="label">비밀번호</label>
+            <div class="control">
+              <input type="password" id="newPasswordInput" autocomplete="off" />
+              <!-- <label class="switch">
+                <input type="checkbox" id="nameToggle" />
+                <span class="slider round"></span>
+              </label> -->
+            </div>
+          </div>
+          <div class="field">
+            <label class="label">비밀번호 확인</label>
+            <div class="control">
+              <input
+                type="password"
+                id="newPasswordConfirmInput"
+                autocomplete="off"
+              />
+            </div>
+          </div>
+          <div class="field">
+            <label class="label">전화번호</label>
+            <div class="control">
+              <input type="text" id="phoneNumberInput" autocomplete="off" />
+              <!-- <label class="switch">
+                <input type="checkbox" id="nameToggle" />
+                <span class="slider round"></span>
+              </label> -->
+            </div>
+          </div>
+          <button
+            class="button button-submit is-info is-fullwidth js-modal-trigger"
+            id="saveButton"
+          >
+            저장하기
+          </button>
+        </form>
+      </div>
     </main>
     <!-- 푸터 -->
     <div data-include-path="../components/footer.html"></div>
