--- a/src/views/order/order.css
+++ b/src/views/order/order.css
@@ -11,7 +11,8 @@
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
-  padding-top: 10%;
+  padding-top: 20px;
+  padding-bottom: 10%;
 }
 
 .orderWrap h2 {
