--- a/src/views/account/account.html
+++ b/src/views/account/account.html
@@ -19,6 +19,14 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300;400;500;600&amp;display=swap"
+      rel="stylesheet"
+    />
+
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="account.css" />
     <script src="account.js" type="module" defer></script>
@@ -28,15 +36,20 @@
     <div data-include-path="../components/header.html"></div>
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container is-max-desktop">
-      <div class="accountWrapper">
-        <ul>
-          <li><a href="/order">주문 목록</a></li>
-          <li><a href="/cart">장바구니</a></li>
-          <!-- 개인 정보 페이지 접근 요청 시 비밀번호 확인하는 기능 추가 필요 -->
-          <li><a href="/info">개인 정보</a></li>
-          <li><a href="">회원탈퇴</a></li>
-        </ul>
-      </div>
+      <section class="accountWrapper">
+        <div class="accountWrapperIn">
+          <aside>
+            <p class="ftSerif">세상에 하나뿐인 추억을 선물하세요</p>
+          </aside>
+          <ul>
+            <li class="img1"><a href="/order">주문 목록</a></li>
+            <li class="img2"><a href="/cart">장바구니</a></li>
+            <!-- 개인 정보 페이지 접근 요청 시 비밀번호 확인하는 기능 추가 필요 -->
+            <li class="img3"><a href="/info">개인 정보</a></li>
+            <li class="img4"><a href="">회원탈퇴</a></li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!-- 푸터 -->
     <div data-include-path="../components/footer.html"></div>
