--- a/src/views/account-order/account-order.html
+++ b/src/views/account-order/account-order.html
@@ -10,7 +10,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/elice-rabbit-favicon.png"
+      href="../images/facon.ico"
     />
 
     <script
