--- a/src/views/account/account.html
+++ b/src/views/account/account.html
@@ -10,7 +10,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/elice-rabbit-favicon.png"
+      href="../images/facon.ico"
     />
 
     <script
