--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>오작뀨</title>
+    <title>장바구니</title>
     <!-- 아이콘 -->
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../images/sample_fav_img.png"
+      href="../images/facon.ico"
     />
 
     <!-- bulma css -->
